dev/logs.txt
n/sh -c /Users/builder/clone/ios/build/Build/Intermediates.noindex/LocalOSApp.build/Release-iphoneos/LocalOSApp.build/Script-00DD1BFF1BD5951E006B06BC.sh
Node found at: /usr/local/bin/node
+ DEST=/Users/builder/clone/ios/build/Build/Products/Release-iphoneos/LocalOSApp.app
+ [[ ! -n '' ]]
+ [[ Release = *Debug* ]]
+ [[ -n '' ]]
+ case "$CONFIGURATION" in
+ DEV=false
+++ dirname /Users/builder/clone/ios/Pods/../../node_modules/react-native/scripts/react-native-xcode.sh
++ cd /Users/builder/clone/ios/Pods/../../node_modules/react-native/scripts/..
++ pwd
+ REACT_NATIVE_DIR=/Users/builder/clone/node_modules/react-native
+ PROJECT_ROOT=/Users/builder/clone/ios/..
+ cd /Users/builder/clone/ios/..
+ [[ -n '' ]]
+ [[ -s index.ios.js ]]
+ ENTRY_FILE=index.js
+ source /Users/builder/clone/node_modules/react-native/scripts/node-binary.sh
++ '[' -z /usr/local/bin/node ']'
++ type /usr/local/bin/node
+ HERMES_ENGINE_PATH=/Users/builder/clone/ios/Pods/hermes-engine
+ '[' -z '' ']'
+ HERMES_CLI_PATH=/Users/builder/clone/ios/Pods/hermes-engine/destroot/bin/hermesc
+ [[ true != false ]]
+ [[ -f /Users/builder/clone/ios/Pods/hermes-engine ]]
+ '[' -z '' ']'
+ export NODE_ARGS=
+ NODE_ARGS=
+ '[' -z '' ']'
+ CLI_PATH=/Users/builder/clone/node_modules/react-native/scripts/bundle.js
+ '[' -z '' ']'
+ BUNDLE_COMMAND=bundle
+ '[' -z '' ']'
+ COMPOSE_SOURCEMAP_PATH=/Users/builder/clone/node_modules/react-native/scripts/compose-source-maps.js
+ [[ -z '' ]]
+ CONFIG_ARG=
+ [[ -z '' ]]
+ BUNDLE_NAME=main
+ BUNDLE_FILE=/Users/builder/clone/ios/build/Build/Products/Release-iphoneos/main.jsbundle
+ EXTRA_ARGS=()
+ case "$PLATFORM_NAME" in
+ BUNDLE_PLATFORM=ios
+ '[' '' = YES ']'
+ EMIT_SOURCEMAP=
+ [[ ! -z '' ]]
+ PACKAGER_SOURCEMAP_FILE=
+ [[ '' == true ]]
+ [[ true != false ]]
+ [[ false == false ]]
+ EXTRA_ARGS+=("--minify" "false")
+ [[ -n '' ]]
+ [[ -n '' ]]
+ EXTRA_ARGS+=("--config-cmd" "'$NODE_BINARY' $NODE_ARGS '$REACT_NATIVE_DIR/cli.js' config")
+ /usr/local/bin/node /Users/builder/clone/node_modules/react-native/scripts/bundle.js bundle --entry-file index.js --platform ios --dev false --reset-cache --bundle-output /Users/builder/clone/ios/build/Build/Products/Release-iphoneos/main.jsbundle --assets-dest /Users/builder/clone/ios/build/Build/Products/Release-iphoneos/LocalOSApp.app --minify false --config-cmd ''\''/usr/local/bin/node'\''  '\''/Users/builder/clone/node_modules/react-native/cli.js'\'' config'

                        ▒▒▓▓▓▓▒▒
                     ▒▓▓▓▒▒░░▒▒▓▓▓▒
                  ▒▓▓▓▓░░░▒▒▒▒░░░▓▓▓▓▒
                 ▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓
                 ▓▓░░░░░▒▓▓▓▓▓▓▒░░░░░▓▓
                 ▓▓░░▓▓▒░░░▒▒░░░▒▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▒▒▒▒▓▓▓▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒░░▓▓
                 ▓▓▒░░▒▒▓▓▓▓▓▓▓▓▒░░░▒▓▓
                  ▒▓▓▓▒░░░▒▓▓▒░░░▒▓▓▓▒
                     ▒▓▓▓▒░░░░▒▓▓▓▒
                        ▒▒▓▓▓▓▒▒


 WARN  the transform cache was reset.
                Welcome to Metro v0.83.3
              Fast - Scalable - Integrated


LOG:Writing bundle output to: /Users/builder/clone/ios/build/Build/Products/Release-iphoneos/main.jsbundle
LOG:Done writing bundle output
+ [[ true == false ]]
+ EXTRA_COMPILER_ARGS=
+ [[ false == true ]]
+ EXTRA_COMPILER_ARGS=-O
+ [[ '' == true ]]
+ /Users/builder/clone/ios/Pods/hermes-engine/destroot/bin/hermesc -emit-binary -max-diagnostic-width=80 -O -out /Users/builder/clone/ios/build/Build/Products/Release-iphoneos/LocalOSApp.app/main.jsbundle /Users/builder/clone/ios/build/Build/Products/Release-iphoneos/main.jsbundle
/Users/builder/clone/ios/build/Build/Products/Release-iphoneos/main.jsbundle:57811:31: error: Invalid regular expression: Parenthesized expression not closed
        var pythonicPattern = /[([w_]+)((.*?))]/s;
                              ^~~~~~~~~~~~~~~~~~~

warning: Run script build phase '[CP-User] [Hermes] Replace Hermes for the right configuration, if needed' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'hermes-engine' from project 'Pods')
warning: Run script build phase 'Bundle React Native code and images' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'LocalOSApp' from project 'LocalOSApp')
note: Run script build phase '[CP-User] [RN]Check FBReactNativeSpec' will be run during every build because the option to run the script phase "Based on dependency analysis" is unchecked. (in target 'React-RCTFBReactNativeSpec' from project 'Pods')
** BUILD FAILED **


The following build commands failed:
	PhaseScriptExecution Bundle\ React\ Native\ code\ and\ images /Users/builder/clone/ios/build/Build/Intermediates.noindex/LocalOSApp.build/Release-iphoneos/LocalOSApp.build/Script-00DD1BFF1BD5951E006B06BC.sh (in target 'LocalOSApp' from project 'LocalOSApp')
	Building workspace LocalOSApp with scheme LocalOSApp and configuration Release
(2 failures)


Build failed :|
Step 4 script `Build iOS Release for Device` exited with status code 65
